fixed white spaces and popup modal

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,13 @@
   padding: 0px 40px 20px;
 }
 
+.ant-select-disabled:where(.css-w8mnev).ant-select:not(
+    .ant-select-customize-input
+  )
+  .ant-select-selector {
+  background: #cdcaca !important;
+}
+
 .ant-modal-header,
 .ant-modal-title {
   background-color: var(--btn-background-secondary) !important;
@@ -295,13 +302,6 @@ input[type="number"]::-webkit-outer-spin-button {
   .ant-select-selector
   .ant-select-selection-search-input {
   height: 100% !important;
-}
-
-.ant-select-disabled:where(.css-dev-only-do-not-override-w8mnev).ant-select:not(
-    .ant-select-customize-input
-  )
-  .ant-select-selector {
-  background-color: #cdcaca !important;
 }
 
 /* DATE PICKER IN VIEW PROPERTY PAGE */
